# nfs4d

./: .gitignore  .travis.yml  LICENSE  Makefile.am  NEWS  README  TODO  configure.ac  data.c  db.c  dir.c  fattr.c  fattr.h  fh.c  fsdb.h  fsdb_xdr.c  fsdb_xdr.h  fsdb_xdr.x  id.c  inode.c  main.c  nfs4_prot.h  nfs4_prot.x  nfs4_prot_server.c  nfs4_prot_svc.c  nfs4_prot_xdr.c  nfs4_xdr.c  nfs4dba.c  nfscommon.h  open.c  rpcregen.sh  server.c  server.h  state.c  util.c  xdr.c
doc/: Makefile.am  release-process.txt  setup.txt  todo.txt
test/: .gitignore  Makefile.am  basic.c  clean-db  getattr-statfs.c  getattr.c  nfs4_compat.h  nfs4_prot.h  nfs4_prot_client.c  nfs4_prot_clnt.c  nfs4_prot_xdr.c  nfstest.h  null.c  pid-exists  prep-db  start-daemon  stop-daemon
